# emg_fatigue

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
emg_fatigue/: __init__.py  config.py  dataset.py  features.py  loocv_run.py
emg_fatigue/analysis/: slope_analysis.py
emg_fatigue/modeling/: evaluate.py  predict.py  train.py
emg_fatigue/plots/: visualize_augmentation.py  visualize_model_predictions.py  visualize_partecipant_data.py
emg_fatigue/utils/: augmentation.py  compute_spectrogram.py  create_loocv_dataset.py  load_emg_data.py  process_emg_data.py
notebooks/: model_training.ipynb  rnn_training.ipynb
