[tool.poetry]
name = "emg-fatigue"
version = "0.1.0"
description = "Modelling muscle fatigue using RNNs trained on sEMG data"
authors = ["Leonardo Garofalo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
loguru = "^0.7.3"
tqdm = "^4.67.1"
typer = "^0.15.2"
scikit-learn = "^1.6.1"
dotenv = "^0.9.9"
tensorflow = "^2.19.0"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
